unpackaged/main/default/objects/bt_stripe__Transaction__c/bt_stripe__Transaction__c.object-meta.xml
<CustomObject>
    <description>A Transaction is mainly used to charge or refund a Payment Method. These types of Transactions use the Charge Record Type. If you use Stripe, we create Payout Transactions from Webhook Events that come in nightly. If you use Stripe Connect, you can also create a Transfer or Payout Transaction for a Connected Account.</description>
    <label>Transaction</label>
    <nameField>
        <displayFormat>TR-{000000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>