unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/Approval_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Approval_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>