unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/Billing_Team_Notes__c.field-meta.xml
<CustomField>
    <fullName>Billing_Team_Notes__c</fullName>
    <inlineHelpText>Use this field to add context needed for any refund or fee waiver requests.</inlineHelpText>
    <label>Billing Team Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>