unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_paylink__AuthLink__c.field-meta.xml
<CustomField>
    <fullName>bt_paylink__AuthLink__c</fullName>
    <description>Unique AuthLink URL. *Paid add-on. Requires subscription.</description>
    <inlineHelpText>Unique AuthLink URL. *Paid add-on. Requires subscription.</inlineHelpText>
    <label>AuthLink</label>
    <type>Url</type>
</CustomField>