unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_paylink__PayLink__c.field-meta.xml
<CustomField>
    <fullName>bt_paylink__PayLink__c</fullName>
    <description>Unique PayLink URL. *Paid add-on. Requires subscription.</description>
    <inlineHelpText>Unique PayLink URL. *Paid add-on. Requires subscription.</inlineHelpText>
    <label>PayLink</label>
    <type>Url</type>
</CustomField>