unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_paylink__PayLink_Configuration__c.field-meta.xml
<CustomField>
    <fullName>bt_paylink__PayLink_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>You can select a PayLink Configuration to override the Payment Gateway&#39;s default.</description>
    <inlineHelpText>You can select a PayLink Configuration to override the Payment Gateway&#39;s default.</inlineHelpText>
    <label>PayLink Configuration</label>
    <referenceTo>bt_paylink__PayLink_Configuration__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>