unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Account_Name__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Account_Name__c</fullName>
    <formula>bt_stripe__Related_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>