unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Amount__c</fullName>
    <inlineHelpText>The total amount to be processed when the Process button is charged or when the auto-charge process runs.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>