unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Amount_in_Cents__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Amount_in_Cents__c</fullName>
    <description>The Amount in Cents. Divide by 100 to get as a Decimal. Useful in multi-currency scenarios</description>
    <formula>bt_stripe__Amount__c * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Amount in Cents. Divide by 100 to get as a Decimal. Useful in multi-currency scenarios</inlineHelpText>
    <label>Amount in Cents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>