unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Amount_To_Capture__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Amount_To_Capture__c</fullName>
    <description>If the transaction was previously authorized and the amount to capture is different then the authorization amount, enter the amount to capture in this field, then capture the transaction.</description>
    <inlineHelpText>If the transaction was previously authorized and the amount to capture is different then the authorization amount, enter the amount to capture in this field, then capture the transaction.</inlineHelpText>
    <label>Amount To Capture</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>