unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Application_Fee__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Application_Fee__c</fullName>
    <inlineHelpText>The application fee less any refunds. If a refund is processed, this amount may decrease based upon the application fee&#39;s pricing schedule.</inlineHelpText>
    <label>Net Application Fee</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>