unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Application_Fee_Total__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Application_Fee_Total__c</fullName>
    <inlineHelpText>The application fee. This fee will not change if subsequent refunds are processed. If there is no application fee, this field will be blank.</inlineHelpText>
    <label>Application Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>