unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Authorization_Code__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Authorization_Code__c</fullName>
    <inlineHelpText>Code returned from the processor for authorization</inlineHelpText>
    <label>Authorization Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>