unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Auto_Capture__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Auto_Capture__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the transaction will be captured automatically on the Due Date. Requires a Payment Method, Amount over the currency minimum, and Due Date to be automatically captured.</inlineHelpText>
    <label>Auto-Process</label>
    <type>Checkbox</type>
</CustomField>