unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Available_On__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Available_On__c</fullName>
    <inlineHelpText>The date the Transaction&#39;s net funds will become available in the Payment Gateway balance.</inlineHelpText>
    <label>Available On</label>
    <type>Date</type>
</CustomField>