unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Balance_Status__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Balance_Status__c</fullName>
    <inlineHelpText>Tracks the balance availability of the Transaction. Updated automatically.</inlineHelpText>
    <label>Balance Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>