unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Capture__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Capture__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Transaction gets captured.</description>
    <inlineHelpText>If checked, the Transaction gets captured.</inlineHelpText>
    <label>Capture</label>
    <type>Checkbox</type>
</CustomField>