unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Card_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Card_Id__c</fullName>
    <inlineHelpText>Unique Gateway-generated token/id of the card used on the transaction.</inlineHelpText>
    <label>Payment Method ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>