unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Connected_Account__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Connected_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>May serve as the source if for a Payout, the destination if for a Transfer, or the source if for a Transfer Reversal.</description>
    <inlineHelpText>May serve as the source if for a Payout, the destination if for a Transfer, or the source if for a Transfer Reversal.</inlineHelpText>
    <label>Connected Account</label>
    <referenceTo>bt_stripe__Connected_Account__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>