unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Connected_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Connected_Account_Id__c</fullName>
    <inlineHelpText>Unique Stripe-generated value. This is stripe id for the.</inlineHelpText>
    <label>Connected Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>