unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Contact_First_Name__c</fullName>
    <formula>bt_stripe__Related_Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact First Name</label>
    <type>Text</type>
</CustomField>