unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Contact_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Contact_Mailing_City__c</fullName>
    <formula>bt_stripe__Related_Contact__r.MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Mailing City</label>
    <type>Text</type>
</CustomField>