unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Contact_Mailing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Contact_Mailing_Postal_Code__c</fullName>
    <formula>bt_stripe__Related_Contact__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Mailing Postal Code</label>
    <type>Text</type>
</CustomField>