unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Contact_Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Contact_Mailing_Street__c</fullName>
    <formula>bt_stripe__Related_Contact__r.MailingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Mailing Street</label>
    <type>Text</type>
</CustomField>