unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Contact_Salutation__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Contact_Salutation__c</fullName>
    <formula>text(bt_stripe__Related_Contact__r.Salutation)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Salutation</label>
    <type>Text</type>
</CustomField>