unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Currency_Conversion_Payout_Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Currency_Conversion_Payout_Amount__c</fullName>
    <inlineHelpText>This is the Payout Amount retrieved from Stripe. It may be different that the Transaction Net Amount if there was a currency conversion.</inlineHelpText>
    <label>Currency Conversion Payout Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>