unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Date_To_Process__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Date_To_Process__c</fullName>
    <label>Date To Process</label>
    <type>Date</type>
</CustomField>