unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Description__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Description__c</fullName>
    <inlineHelpText>The description of the transaction. This field populates on the resulting receipt to the customer.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>