unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Dont_Auto_Update_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Dont_Auto_Update_Payment_Method__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the payment method will not be automatically updated if a new default payment method is set for this stripe customer.</description>
    <inlineHelpText>If checked, the payment method will not be automatically updated if a new default payment method is set for this gateway customer.</inlineHelpText>
    <label>Don&#39;t Auto-Update Payment Method</label>
    <type>Checkbox</type>
</CustomField>