unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Error_Param__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Error_Param__c</fullName>
    <inlineHelpText>Gateway error parameter. This field auto-populates if there is an error when the transaction processes.</inlineHelpText>
    <label>Error Parameter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>