unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Exchange_Rate__c</fullName>
    <inlineHelpText>Exchange Rate set by the Stripe Payout.</inlineHelpText>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>