unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__External_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__External_Account_Type__c</fullName>
    <formula>IF( bt_stripe__Payment_Method__r.RecordType.Name==&#39;ACH&#39; , &#39;Bank Account&#39;,  TEXT(bt_stripe__Payment_Method__r.bt_stripe__Funding__c)  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Account Type</label>
    <type>Text</type>
</CustomField>