unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Fraud_Details__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Fraud_Details__c</fullName>
    <label>Fraud Details</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Safe</fullName>
            </value>
            <value>
                <fullName>Fraudulent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>