unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Invalid_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Invalid_Payment_Method__c</fullName>
    <formula>If( text(bt_stripe__Payment_Method__r.bt_stripe__Payment_Method_Status__c)= &#39;Valid&#39; || text( bt_stripe__Payment_Method__r.bt_stripe__Payment_Method_Status__c) =&#39;One-Time&#39; || text(bt_stripe__Payment_Method__r.bt_stripe__Payment_Method_Status__c)= &#39;Verified&#39;,
FALSE,
If( ISBLANK(bt_stripe__Payment_Method__c),FALSE, 
TRUE
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the related Payment Method cannot be captured, this box will be checked.
- For Cards, Payment Method Status must be Valid or One-Time.
- For ACH, Payment Method Status must be Verified.</inlineHelpText>
    <label>Invalid Payment Method</label>
    <type>Checkbox</type>
</CustomField>