unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Invoice_Number__c</fullName>
    <inlineHelpText>Invoice Number</inlineHelpText>
    <label>Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>