unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Key__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>A unique key generated to assist with Stripe record management, stored as Stripe metadata.</description>
    <inlineHelpText>A unique key generated to assist with Stripe record management, stored as Stripe metadata.</inlineHelpText>
    <label>Key</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>