unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Mobile_App_Version__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Mobile_App_Version__c</fullName>
    <inlineHelpText>Set to the Blackthorn Mobile App version that created or updated this record.</inlineHelpText>
    <label>Mobile App Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>