unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Mobile_Lock_Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Mobile_Lock_Amount__c</fullName>
    <inlineHelpText>Used by the mobile app to determine if the Amount on the Transaction can be edited. Set value to Yes to prevent the Amount from being edited.</inlineHelpText>
    <label>Mobile Lock Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>