unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Net_Amount__c</fullName>
    <inlineHelpText>The Amount less the Original Gateway Fee and the Original Application Fee. Refunds are not factored into this calculation. This is the amount you will receive before currency conversion if applicable.</inlineHelpText>
    <label>Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>