unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Network_Status__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Network_Status__c</fullName>
    <label>Network Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>approved_by_network</fullName>
                <label>Approved By Network</label>
            </value>
            <value>
                <fullName>declined_by_network</fullName>
                <label>Declined By Network</label>
            </value>
            <value>
                <fullName>not_sent_to_network</fullName>
                <label>Not Sent to Network</label>
            </value>
            <value>
                <fullName>reversed_after_approval</fullName>
                <label>Reversed After Approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>