unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Opportunity2__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Opportunity2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions2</relationshipName>
    <type>Lookup</type>
</CustomField>