unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Outcome_Type__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Outcome_Type__c</fullName>
    <label>Outcome Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>authorized</fullName>
                <label>Authorized</label>
            </value>
            <value>
                <fullName>manual_review</fullName>
                <label>Manual Review</label>
            </value>
            <value>
                <fullName>issuer_declined</fullName>
                <label>Issuer Declined</label>
            </value>
            <value>
                <fullName>blocked</fullName>
                <label>Blocked</label>
            </value>
            <value>
                <fullName>invalid</fullName>
                <label>Invalid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>